[package]
name = "linearalgebra"
version = "0.1.0"
authors = ["Debasish Ray Chawdhuri <debasish@geekyarticlesc.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-bigint = "0.2.6"
num-complex = "0.2.4"
num-integer = "0.1"
itertools = "0.10.5"
funty = "2.0.0"

proptest = "1.1.0"
